--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "crud-test",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon index.js",
     "test": "mocha --timeout 10000"
   },
   "keywords": [],
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "chai": "^4.3.7",
